fix chart overflow

--- a/groundStation/data/style.css
+++ b/groundStation/data/style.css
@@ -149,6 +149,11 @@ h2 {
     height: 25vh;
 }
 
+canvas {
+    width: 100% !important;
+    height: 100% !important;
+}
+
 footer {
     width: 100vw;
     height: 7.5vh;
